Change 12 column to 15

--- a/main/assets/css/components/_2_listing-main.scss
+++ b/main/assets/css/components/_2_listing-main.scss
@@ -8,5 +8,5 @@ Usage: codyhouse.co/license
 -------------------------------- */
 
 .listing-main {
-    padding-top: var(--space-xl);
+    padding-top: var(--space-lg);
 }
