Menu and Justified grid styling

--- a/main/assets/css/components/_1_justified-grid.scss
+++ b/main/assets/css/components/_1_justified-grid.scss
@@ -40,6 +40,7 @@ $flexbin-space-phone: $flexbin-space !default;
             max-width: 100%;
             min-width: 100%;
             vertical-align: bottom;
+            border-radius: var(--radius-md) var(--radius-md);
         }
     }
 
