Added movies page

--- a/main/assets/css/components/_1_card-v2.scss
+++ b/main/assets/css/components/_1_card-v2.scss
@@ -10,11 +10,11 @@ Usage: codyhouse.co/license
 .card-v2 {
     position: relative;
     border-radius: var(--radius-md);
+    height: 60px;
     overflow: hidden;
   
     img {
       display: block;
-      width: 100%;
     }
   }
   
